# Algorithm2024

./: .gitignore  CMakeLists.txt  PDv1  PKv1
AlgContest1481/A/: PAv1.cpp
AlgContest1481/C/: PCv1.cpp
AlgContest1481/D/: PDv1.cpp
AlgContest1481/E/: PEv1.cpp
AlgContest1481/F/: PFv1.cpp
AlgContest1481/G/: PGv1.cpp  PGv2.cpp
AlgContest1481/H/: PHv1.cpp
AlgContest1481/I/: PIv1.cpp
AlgContest1481/J/: PJv1.cpp
AlgContest1481/K/: PKv1.cpp
AlgContest1481/L/: PLv1.cpp
AlgContest1481/M/: PMv1.cpp
AlgContest1481/N/: PNv1.cpp
AlgContest1481/O/: POv1.cpp
AlgContest1481/P/: PPv1.cpp  PPv2.cpp
AlgContest1481/Q/: PQv1.cpp
AlgContest1481/R/: PRv1.cpp
AlgContest1481/S/: PSv1.cpp
AlgContest1481/T/: PTv1.cpp
AlgContest1481/V/: PVv1.cpp  PVv2.cpp
AlgContest1481/W/: PWv1.cpp
AlgContest1481/X/: PXv1.cpp
AlgContest1481/Y/: PYv1.cpp  PYv2.cpp  PYv3.cpp
AlgContest1486/A/: PAv1.cpp
AlgContest1486/B/: PBv1.cpp  PBv2.cpp
AlgContest1486/C/: PCv1.cpp
AlgContest1486/D/: PDv1.cpp  PDv2.cpp
AlgContest1486/E/: PEv1.cpp
AlgContest1486/F/: PFv1.cpp
AlgContest1486/G/: PGv1.cpp
AlgContest1486/H/: PHv1.cpp
AlgContest1486/I/: PIv1.cpp
AlgContest1486/J/: PJv1.cpp
AlgContest1486/K/: PKv1.cpp
AlgContest1486/L/: PLv1.cpp
AlgContest1486/M/: PMv1.cpp
AlgContest1486/N/: PNv1.cpp
AlgContest1486/O/: POv1.cpp
AlgContest1494/A/: PAv1.cpp
AlgContest1494/B/: PBv1.cpp
AlgContest1494/C/: PCv1.cpp  PCv2.cpp
AlgContest1494/D/: PDv1.cpp  PDv2.cpp
AlgContest1494/E/: PEv1.cpp
AlgContest1494/F/: PFv1.cpp
AlgContest1494/G/: PGv1.cpp
AlgContest1494/H/: PHv1.cpp
AlgContest1494/I/: PIv1.cpp
AlgContest1494/K/: PJv1.cpp  PKv1.cpp
AlgContest1516/A/: PAv1.cpp
AlgContest1516/B/: PBv1.cpp
AlgContest1516/C/: PCv1.cpp
AlgContest1516/D/: PDv1.cpp
AlgContest1516/E/: PEv1.cpp
AlgContest1516/F/: PFv1.cpp
AlgContest1516/G/: PGv1.cpp
AlgContest1516/H/: PHv1.cpp
AlgContest1516/I/: PIv1.cpp
AlgContest1516/J/: PJv1.cpp
AlgContest1516/K/: PKv1.cpp
AlgContest1516/L/: PLv1.cpp
AlgContest1516/M/: PMv1.cpp
AlgContest1516/N/: PNv1.cpp
AlgContest1516/O/: POv1.cpp
AlgContest1536/A/: PAv1.cpp
AlgContest1536/B/: PBv1.cpp
AlgContest1536/C/: PCv1.cpp
AlgContest1536/D/: PDv1.cpp
AlgContest1536/E/: PEv1.cpp
AlgContest1536/F/: PFv1.cpp
AlgContest1536/G/: PGv1.cpp
AlgContest1536/N/: PNv1.cpp
AlgContest1536/O/: POv1.cpp
AlgContest1557/A/: PAv1.cpp  PAv2.cpp
AlgContest1557/B/: PBv1.cpp
AlgContest1557/C/: PCv1.cpp
AlgContest1557/D/: PDv1.cpp
AlgContest1557/E/: PEv1.cpp
AlgContest1557/F/: PFv1.cpp
AlgContest1557/G/: PGv1.cpp
AlgContest1557/H/: PHv1.cpp
AlgContest1557/I/: PIv1.cpp
AlgContest1557/J/: PJv1.cpp
AlgContest1557/K/: PKv1.cpp
AlgContest1557/L/: PLv1.cpp
OJ7/: P6540.cpp  P6540.md  P6541.cpp  P6541.md  P6542.cpp  P6542.md  P6543.cpp  P6543.md  P6544.cpp  P6544.md  P6545.cpp  P6545.md  P6546.cpp  P6546.md  P6547.cpp  P6547.md  P6548.cpp  P6548.md  P6549.cpp  P6549.md  P6550.cpp  P6550.md  P6551.cpp  P6551.md  P6552.cpp  P6552.md  P6553.cpp  P6553.md  P6554.cpp  P6554.md  P6555.cpp  P6555.md  P6556.cpp  P6556.md  P6557.cpp  P6557.md  P6558.cpp  P6558.md  P6559.cpp  P6559.md
strange/: pi.cpp
(+47 files in other folders)
