cmake_minimum_required(VERSION 3.0)
project(Algorithm2024)

add_executable(PJv1 AlgContest1570/J/PJv1.cpp)
add_executable(PKv1 AlgContest1575/K/PKv1.cpp)
add_executable(PLv1 AlgContest1573/L/PLv1.cpp)
add_executable(PMv1 AlgContest1557/M/PMv1.cpp)
add_executable(PNv1 AlgContest1557/N/PNv1.cpp)
add_executable(POv1 AlgContest1557/O/POv1.cpp)

add_executable(PDv1 AlgContest1575/D/PDv1.cpp)
add_executable(PSv1 AlgContest1557/S/PSv1.cpp)
add_executable(PTv1 AlgContest1557/T/PTv1.cpp)
add_executable(PAv1 AlgContest1582/A/PAv1.cpp)
add_executable(PBv1 AlgContest1577/B/PBv1.cpp)
add_executable(PCv1 AlgContest1575/C/PCv1.cpp)

add_executable(PEv1 AlgContest1570/E/PEv1.cpp)
add_executable(PFv1 AlgContest1570/F/PFv1.cpp)
add_executable(PGv1 AlgContest1577/G/PGv1.cpp)
add_executable(PHv1 AlgContest1570/H/PHv1.cpp)
add_executable(PIv1 AlgContest1570/I/PIv1.cpp)

add_executable(PXv1 AlgContest1557/X/PXv1.cpp)

add_executable(PPv1 AlgContest1557/P/PPv1.cpp)
add_executable(PRv1 AlgContest1557/R/PRv1.cpp)

add_executable(PUv1 AlgContest1557/U/PUv1.cpp)
add_executable(PVv1 AlgContest1557/V/PVv1.cpp)
add_executable(PWv1 AlgContest1557/W/PWv1.cpp)
add_executable(PYv1 AlgContest1582/Y/PYv1.cpp)
add_executable(PZv1 AlgContest1582/Z/PZv1.cpp)

add_executable(PDv2 AlgContest1573/D/PDv2.cpp)

add_executable(PHv2 AlgContest1570/H/PHv2.cpp)

add_executable(P6540 OJ7/P6540.cpp)
add_executable(P6541 OJ7/P6541.cpp)
add_executable(P6542 OJ7/P6542.cpp)
add_executable(P6543 OJ7/P6543.cpp)
add_executable(P6544 OJ7/P6544.cpp)
add_executable(P6545 OJ7/P6545.cpp)
add_executable(P6546 OJ7/P6546.cpp)
add_executable(P6547 OJ7/P6547.cpp)
add_executable(P6548 OJ7/P6548.cpp)
add_executable(P6549 OJ7/P6549.cpp)
add_executable(P6550 OJ7/P6550.cpp)
add_executable(P6551 OJ7/P6551.cpp)
add_executable(P6552 OJ7/P6552.cpp)
add_executable(P6553 OJ7/P6553.cpp)
add_executable(P6554 OJ7/P6554.cpp)
add_executable(P6555 OJ7/P6555.cpp)
add_executable(P6556 OJ7/P6556.cpp)
add_executable(P6557 OJ7/P6557.cpp)
add_executable(P6558 OJ7/P6558.cpp)
add_executable(P6559 OJ7/P6559.cpp)

add_executable(pi strange/pi.cpp)